--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/redux-logger": "^3.0.7",
     "@types/uuid": "^3.4.5",
     "@types/webpack-env": "^1.14.0",
+    "@types/yup": "^0.26.23",
     "@typescript-eslint/eslint-plugin": "^1.13.0",
     "@typescript-eslint/parser": "^1.13.0",
     "babel-loader": "^8.0.6",
@@ -60,6 +61,7 @@
     "classnames": "^2.2.6",
     "core-js": "^3.1.4",
     "date-fns": "^2.0.1",
+    "formik": "^1.5.8",
     "history": "^4.9.0",
     "lodash": "^4.17.15",
     "react": "^16.8.6",
@@ -70,6 +72,7 @@
     "redux": "^4.0.4",
     "redux-logger": "^3.0.6",
     "regenerator-runtime": "^0.13.3",
-    "uuid": "^3.3.2"
+    "uuid": "^3.3.2",
+    "yup": "^0.27.0"
   }
 }
